added includes of jquery jquery-ui angular angular-ui-router bootstrap-material-design

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
 	<meta charset="UTF-8">
 	<title>dssadsaadas</title>
+	<link rel="stylesheet" href="app/bower_components/bootstrap-material-design/dist/css/material.min.css">
+	<link rel="stylesheet" href="app/bower_components/jquery-ui/themes/base/jquery-ui.min.css">
 	<link rel="stylesheet" href="dist/styles/style.min.css">
 </head>
 <body>
 	
-	<h2>hello worlssd</h2>
+	<h2>hello worlssdII</h2>
+<script type="text/javascript" src="app/bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="app/bower_components/jquery-ui/jquery-ui.min.js"></script>
+<script type="text/javascript" src="app/bower_components/angular/angular.min.js"></script>
+<script type="text/javascript" src="app/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script type="text/javascript" src="app/bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
 <script type="text/javascript" src="dist/scripts/app.min.js"></script>
 </body>
 </html>
